<resources>
    <string name="app_name">Level6Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="the_most_popular_movies_of">The most popular movies of</string>
    <string name="year">Year</string>
    <string name="submit">SUBMIT</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="star">Star</string>
    <string name="overview">Overview</string>
</resources>