<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MovieFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_most_popular_movies_of" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/year">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tilMovieYear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvInput" />

</androidx.constraintlayout.widget.ConstraintLayout>